--- a/classworks/evgeny-marushko/03_html-css-part-2/src/index.html
+++ b/classworks/evgeny-marushko/03_html-css-part-2/src/index.html
@@ -9,34 +9,41 @@
 	<script src="bundle.js"></script>
 </head>
 <body>
-	<div class="menu_swithcher" id="menu_swithcher"><i class="menu_swithcher__icon fa fa-bars"></i></div>
+	<div class="menu-swithcher" id="menu_swithcher"><i class="menu_swithcher__icon fa fa-bars"></i></div>
 	<menu class="sidebar" id="sidebar">
-		<div class="sidebar__profile">
+		<div class="profile">
 			<img class="profile__avatar" src="images/avatar.jpg">
 			<div class="profile__info">
-				<span class="info__name">Jane Doe</span>
-				<span class="info__prof">Hyperspace Engineer</span>
+					<span class="profile__name">Jane Doe</span>
+					<span class="profile__prof">Hyperspace Engineer</span>
+			</div>
 			</div>
 		</div>
-		<nav class="sidebar__nav">
-			<div class="nav__unit">
-				<i class="fa fa-home"></i>
-				<span class="unit__title">Home</span>
-			</div>
-			<div class="nav__unit">
-				<i class="fa fa-th"></i>
-				<span class="unit__title">Portfolio</span>
-			</div>
-			<div class="nav__unit">
-				<i class="fa fa-user"></i>
-				<span class="unit__title">About Me</span>
-			</div>
-			<div class="nav__unit">
-				<i class="fa fa-envelope"></i>
-				<span class="unit__title">Contact</span>
-			</div>
+		<nav class="page-nav">
+			<a href="#intro">
+				<li class="page-nav__unit">
+					<i class="fa fa-home"></i>
+					<span class="unit__title">Intro</span>
+				</li>
+			</a>
+			<a href="#portfolio">
+				<li class="page-nav__unit">
+					<i class="fa fa-th"></i>
+					<span class="unit__title">Portfolio</span>
+				</li>
+			</a>
+				<li class="page-nav__unit">
+					<i class="fa fa-user"></i>
+					<span class="unit__title">About Me</span>
+				</li>
+			<a href="#contact">
+				<li class="page-nav__unit">
+					<i class="fa fa-envelope"></i>
+					<span class="unit__title">Contact</span>
+				</li>
+			</a>
 		</nav>
-		<footer class="sidebar__footer">
+		<footer class="footer">
 			<i class="footer__icon fa fa-twitter"></i>
 			<i class="footer__icon fa fa-facebook"></i>
 			<i class="footer__icon fa fa-github"></i>
@@ -45,78 +52,74 @@
 		</footer> 
 	</menu>
 	<section class="section">
-		<article class="intro" id="intro">
-			<div class="intro__content_container">
-				<span class="content_container__text">
+		<article class="article article--intro" id="intro">
+			<div class="content-container">
+				<span class="content-container__text content-container__text--white">
 					<h1>
 						Hi! I'm Prologue, a free responsive site template designed by HTML5 UP
 					</h1>
 				</span>
-				<span class="content_container__subtext">
-					<h2>
-						If the Easter Bunny and the Tooth Fairy had babies would they take your teeth and leave chocolate for you? I'd rather be a bird than a fish.
-					</h2>
+				<span class="content-container__subtext content-container__subtext--white">
+					If the Easter Bunny and the Tooth Fairy had babies would they take your teeth and leave chocolate for you? I'd rather be a bird than a fish.
 				</span>
-				<button class="content_container__button">Click me!</button>
+				<button class="content-container__button">Click me!</button>
 			</div>
 		</article>
-		<article class="portfolio" id="portfolio">
-			<span class="portfolio__text">
-				<h1>
+		<article class="article article--portfolio" id="portfolio">
+			<div class="content-container">
+				<h1 class="content-container__text content-container__text--gray">
 					Portfolio
 				</h1>
-			</span>
-			<span class="portfolio__subtext">
-				<h2>
+				<span class="content-container__subtext content-container__subtext--gray">
 					If the Easter Bunny and the Tooth Fairy had babies would they take your teeth and leave chocolate for you? I'd rather be a bird than a fish.
-				</h2>
-			</span>
-			<div class="portfolio__col_container">
-				<div class="col_container__col">
-					<figure class="col__figure">
+				</span>
+			</div>
+			<div class="col-container">
+				<div class="col-container__col">
+					<figure class="figure">
 						<img class="figure__img" src="/images/pic02.jpg">
 						<span class="figure__title">img</span>
 					</figure>
-					<figure class="col__figure">
+					<figure class="figure">
 						<img class="figure__img" src="/images/pic03.jpg">
 						<span class="figure__title">img</span>
 					</figure>
 				</div>
-				<div class="col_container__col">
-					<figure class="col__figure">
+				<div class="col-container__col">
+					<figure class="figure">
 						<img class="figure__img" src="/images/pic04.jpg">
 						<span class="figure__title">img</span>
 					</figure>
 				</div>
-				<div class="col_container__col">
-					<figure class="col__figure">
+				<div class="col-container__col">
+					<figure class="figure">
 						<img class="figure__img" src="/images/pic06.jpg">
 						<span class="figure__title">img</span>
 					</figure>
-					<figure class="col__figure">
+					<figure class="figure">
 						<img class="figure__img" src="/images/pic07.jpg">
 						<span class="figure__title">img</span>
 					</figure>
 				</div>
 			</div>
 		</article>
-		<article class="contact" id="contact">
-			<span class="contact__text">
-				<h1>
+		<article class="article artcile--contact" id="contact">
+			<div class="content-container">
+				<h1 class="content-container__text content-container__text--gray">
 					Contact
 				</h1>
-			</span>
-			<span class="contact__subtext">
-				<h2>
+				<span class="content-container__subtext content-container__subtext--gray">
 					If the Easter Bunny and the Tooth Fairy had babies would they take your teeth and leave chocolate for you? I'd rather be a bird than a fish.
-				</h2>
-			</span>
-			<div class="contact__inputs">
-				<input class="inputs__unit" type="text" name="name" placeholder="Name">
-				<input class="inputs__unit" type="text" name="email" placeholder="Email">
+				</span>
 			</div>
-			<textarea class="contact__textarea" placeholder="Message"></textarea>
-			<button class="contact__button">Send Message</button>
+			<div class="input-container">
+				<input class="input-container__unit" type="text" name="name" placeholder="Name">
+				<input class="input-container__unit" type="text" name="email" placeholder="Email">
+			</div>
+			<div class="content-container">
+				<textarea class="content-container__textarea" placeholder="Message"></textarea>
+				<button class="content-container__button">Send Message</button>
+			</div>
 		</article>
 	</section>
 	<script>
