--- a/classworks/polina-rudenko/03_htmlcss/pr_03/src/index.html
+++ b/classworks/polina-rudenko/03_htmlcss/pr_03/src/index.html
@@ -10,7 +10,7 @@
 <body class="body ">
 
    <div class="sidebar">
-    <div>
+    <div class="menu__place">
     <div class="sidebar__profile">
       <img class="profile__avatar" src="images/avatar.jpg">
        <div class="profile__info">
