--- a/classworks/nikita-solosniuk/03_html_css_part-2/boilerplate/src/index.html
+++ b/classworks/nikita-solosniuk/03_html_css_part-2/boilerplate/src/index.html
@@ -2,12 +2,16 @@
 <html>
 <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lecture 3</title>
     <link rel="stylesheet" href="styles/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600" rel="stylesheet">
     <script src="bundle.js" ></script>
 </head>
     <body>
+        <div class="burger-button">
+            <i class="fa fa-bars" aria-hidden="true"></i>
+        </div>
         <div class="sidebar">
             <div class="sidebar__header user-card">
               <img class="user-card__image" src="/images/avatar.jpg">
@@ -124,5 +128,6 @@
                 <button class="button">Send <del>Nudes</del> Message</button>
             </div>
         </div>
+    <script src = "./scripts/script.js"></script>
     </body>
 </html>
