--- a/classworks/nicolay-yurkevich/02_html-css-part-2/src/index.html
+++ b/classworks/nicolay-yurkevich/02_html-css-part-2/src/index.html
@@ -20,23 +20,23 @@
                     <span class="aside__lastName">HyperSpace Engineer</span>
                 </div>
             </div>
-            <ul class="aside__list">
-                <li class="aside__li">
-                    <a class="aside__listLink" href="#prologue"><i class="fa fa-home"></i> <span class="aside__options">Intro</span></a></li>
-                <li class="aside__li">
-                    <a class="aside__listLink" href="#portfolio"><i class="fa fa-th" aria-hidden="true"></i> <span class="aside__options">Portfolio</span></a></li>
-                <li class="aside__li">
-                    <a class="aside__listLink" href="#about"><i class="fa fa-user-o" aria-hidden="true"></i> <span class="aside__options">About Me</span></a></li>
-                <li class="aside__li">
-                    <a class="aside__listLink" href="#contact"><i class="fa fa-envelope" aria-hidden="true"></i> <span class="aside__options">Contact</span></a></li>
+            <ul class="navigation">
+                <li class="navigation__li">
+                    <a class="navigation__listLink" href="#prologue"><i class="fa fa-home"></i> <span class="navigation__options">Intro</span></a></li>
+                <li class="navigation__li">
+                    <a class="navigation__listLink" href="#portfolio"><i class="fa fa-th" aria-hidden="true"></i> <span class="navigation__options">Portfolio</span></a></li>
+                <li class="navigation__li">
+                    <a class="navigation__listLink" href="#about"><i class="fa fa-user-o" aria-hidden="true"></i> <span class="navigation__options">About Me</span></a></li>
+                <li class="navigation__li">
+                    <a class="navigation__listLink" href="#contact"><i class="fa fa-envelope" aria-hidden="true"></i> <span class="navigation__options">Contact</span></a></li>
             </ul>
         </div>
-        <div class="aside__footer">
-            <i class="fa aside__footerList fa-twitter" aria-hidden="true"></i>
-            <i class="fa aside__footerList fa-facebook-square" aria-hidden="true"></i>
-            <i class="fa aside__footerList fa-github" aria-hidden="true"></i>
-            <i class="fa aside__footerList fa-vk" aria-hidden="true"></i>
-            <i class="fa aside__footerList fa-envelope" aria-hidden="true"></i>
+        <div class="aside-footer">
+            <i class="fa aside-footer__List fa-twitter" aria-hidden="true"></i>
+            <i class="fa aside-footer__List fa-facebook-square" aria-hidden="true"></i>
+            <i class="fa aside-footer__List fa-github" aria-hidden="true"></i>
+            <i class="fa aside-footer__List fa-vk" aria-hidden="true"></i>
+            <i class="fa aside-footer__List fa-envelope" aria-hidden="true"></i>
         </div>
     </div>
     <main class="main main_tog">
@@ -50,7 +50,7 @@
             </div>
             <div class="prologue__container-s">
                 Lingua scelerisque justo sem accumsan diam quis
-                <br> vitae natoque distum sollicitudin elemenum.
+                 vitae natoque distum sollicitudin elemenum.
             </div>
             <button class="button">Magna Aliquam</button>
         </section>
@@ -60,33 +60,31 @@
             <div class="picture">
                 <div class="picture__figure">
                     <div class="picture__image-wrapper">
-                        <img class="picture__image" src="images/pic02.jpg" alt="">
+                        <img class="portfolio-card__image" src="images/pic02.jpg" alt="">
                         <br>
-                        <span>Lorem ipsum dolor.</span>
+                        <span class="portfolio-card__description">Lorem ipsum dolor.</span>
                     </div>
-                    <div class="picture__image-wrapper">
-                        <img class="picture__image" src="images/pic03.jpg" alt="">
-                        <br>
-                        <span>Lorem ipsum dolor sit amet.</span>
-                    </div>
-                </div>
-                <div class="picture__figure">
-                    <div class="picture__image-wrapper">
-                        <img class="picture__image" src="images/pic04.jpg" alt="">
-                        <br>
-                        <span>Lorem ipsum dolor sit amet.</span>
+                    <div class="portfolio-card">
+                        <img class="portfolio-card__image" src="images/pic03.jpg" alt="">
+                        <span class="portfolio-card__description">Lorem ipsum dolor sit amet.</span>
                     </div>
                 </div>
                 <div class="picture__figure">
-                    <div class="picture__image-wrapper">
-                        <img class="picture__image" src="images/pic05.jpg" alt="">
-                        <br>
-                        <span> Lorem ipsum dolor sit.</span>
+                    <div class="portfolio-card">
+                        <img class="portfolio-card__image" src="images/pic04.jpg" alt="">
+                       
+                        <span class="portfolio-card__description">Lorem ipsum dolor sit amet.</span>
                     </div>
-                    <div class="picture__image-wrapper">
-                        <img class="picture__image" src="images/pic06.jpg" alt="">
-                        <br>
-                        <span> Lorem ipsum dolor sit.</span>
+                </div>
+                <div class="picture__figure">
+                    <div class="portfolio-card">
+                        <img class="portfolio-card__image" src="images/pic05.jpg" alt="">
+                        
+                        <span class="portfolio-card__description"> Lorem ipsum dolor sit.</span>
+                    </div>
+                    <div class="portfolio-card">
+                        <img class="portfolio-card__image" src="images/pic06.jpg" alt="">
+                        <span class="portfolio-card__description"> Lorem ipsum dolor sit.</span>
                     </div>
                 </div>
             </div>
