--- a/classworks/polina-rudenko/03_htmlcss/pr_03/src/index.html
+++ b/classworks/polina-rudenko/03_htmlcss/pr_03/src/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,67 +8,67 @@
   <link rel="stylesheet" href="styles/base/font-awesome.min.css">
   <title>Document</title>
 </head>
+
 <body class="body ">
 
-   <div class="sidebar">
+  <div class="sidebar">
     <div class="menu__place">
-    <div class="sidebar__profile">
-      <img class="profile__avatar" src="images/avatar.jpg">
-       <div class="profile__info">
-       <p class="profile__name">Jane Doe</p>
-        Hyperspace Engineer
+      <div class="sidebar__profile">
+        <img class="profile__avatar" src="images/avatar.jpg">
+        <div class="profile__info">
+          <p class="profile__name">Jane Doe</p>
+          Hyperspace Engineer
+        </div>
       </div>
+
+      <ul class="menu">
+        <li class="menu__item">
+          <i class="fa fa-home item__icon"> </i>
+          <a href="#Intro" class="item__link"> Intro </a>
+        </li>
+        <li class="menu__item">
+          <i class="fa fa-th  item__icon"></i>
+          <a href="#Portfolio" class="item__link"> Portfolio</a>
+        </li>
+        <li class="menu__item">
+          <i class="fa fa-user  item__icon"></i>
+          <a href="" class="item__link"> About Me</a>
+        </li>
+        <li class="menu__item">
+          <i class="fa fa-envelope  item__icon"></i>
+          <a href="#Contact" class="item__link"> Contact</a>
+        </li>
+      </ul>
+    </div>
+    <div class="footer__place">
+      <ul class="footer">
+        <li class="footer__item"> <i class="fa fa-twitter footer__icon"></i> </li>
+        <li class="footer__item"> <i class="fa fa-facebook footer__icon"></i></li>
+        <li class="footer__item"> <i class="fa fa-github footer__icon"></i></li>
+        <li class="footer__item"> <i class="fa fa-dribbble footer__icon"></i></li>
+        <li class="footer__item"> <i class="fa fa-envelope footer__icon"></i></li>
+      </ul>
+    </div>
+  </div>
+
+  <div class="content">
+    <div class="menu-button">
+      <i class="fa fa-bars"></i>
     </div>
 
-    <ul class="menu">
-       <li class="menu__item">
-         <i class="fa fa-home item__icon"> </i>
-         <a href="#Intro" class="item__link"> Intro </a>
-      </li>
-      <li class="menu__item">
-        <i class="fa fa-th  item__icon"></i>
-        <a href="#Portfolio" class="item__link"> Portfolio</a>
-      </li>
-      <li class="menu__item">
-        <i class="fa fa-user  item__icon"></i>
-       <a href="" class="item__link"> About Me</a>
-     </li>
-      <li class="menu__item">
-        <i class="fa fa-envelope  item__icon"></i>
-        <a href="#Contact" class="item__link"> Contact</a>
-      </li>
-    </ul>
-  </div>
-     <div class="footer__place">
-  <ul class="sidebar__footer">
-  <li class="footer__item">  <i class="fa fa-twitter footer__icon"></i> </li>
-  <li class="footer__item">  <i class="fa fa-facebook footer__icon"></i></li>
-  <li class="footer__item">  <i class="fa fa-github footer__icon"></i></li>
-  <li class="footer__item">  <i class="fa fa-dribbble footer__icon"></i></li>
-  <li class="footer__item">  <i class="fa fa-envelope footer__icon"></i></li>
-  </ul>
-</div>
-</div>
-
-
-<div class="content">
-  <div class="menu-button">
-   <i class="fa fa-bars"></i>
-  </div>
-
-  <div class="intro" id="Intro">
-    <div class="intro__content">
-   <div class="content__header">
-     Hi! I'm Prologue, a <font>free </font>responsive
-     <br>
-     site template designed by <font>HTML5 UP</font>
-   </div>
-   <div class="content__description">
-     Ligula scelerisque justo sem accumsan diam quis
-     <br>
-      vitae naque dictum sollicitudin elementum.
-   </div>
-   <button class="button"> Magna Aliquam</a>
+    <div class="intro" id="Intro">
+      <div class="intro__content">
+        <div class="content__header">
+          Hi! I'm Prologue, a
+          <font>free </font>responsive
+          <br> site template designed by
+          <font>HTML5 UP</font>
+        </div>
+        <div class="content__description">
+          Ligula scelerisque justo sem accumsan diam quis
+          <br> vitae naque dictum sollicitudin elementum.
+        </div>
+        <button class="button"> Magna Aliquam</a>
   </div>
 </div>
 
