[yk_html-css-part-1] Change button in section1 on reference

--- a/classworks/yegor-koren/02_html_css_part_1/index.html
+++ b/classworks/yegor-koren/02_html_css_part_1/index.html
@@ -52,9 +52,10 @@
           mplate designed by <span class="span dashed-span">HTML5 UP</span>.</p>
         <p class="small-paragraph">Ligula scelerisque justo sem accumsan diam quis vitae natoque dictum
           sollicitudin elementum.</p>
-      <form class="form" action="" method="get">
+      <!--<form class="form" action="" method="get">
         <input class="button" type="submit" name="section1-button" value="Magna Aliquam">
-      </form>
+      </form>-->
+        <a class="section1-button" href="#">Magna Aliquam</a>
     </section>
     <section class="section section2" id="portfolio">
       <h1 class="header">Portfolio</h1>
