--- a/classworks/nikita-solosniuk/05_js/index.html
+++ b/classworks/nikita-solosniuk/05_js/index.html
@@ -17,6 +17,7 @@
       <button class="minus button">-10 cекунд</button>
       <button class="reset button">Сброс</button>
     </div>
+    <div>Перейти на <a href = timer.html>Таймер</a></div>
   </main>
 
   <script src="index.js"></script>
