--- a/classworks/evgeny-marushko/03_html-css-part-2/src/index.html
+++ b/classworks/evgeny-marushko/03_html-css-part-2/src/index.html
@@ -54,12 +54,12 @@
 	<section class="section">
 		<article class="article article--intro" id="intro">
 			<div class="content-container">
-				<span class="content-container__text content-container__text--white">
+				<span class="content-container__text">
 					<h1>
 						Hi! I'm Prologue, a free responsive site template designed by HTML5 UP
 					</h1>
 				</span>
-				<span class="content-container__subtext content-container__subtext--white">
+				<span class="content-container__subtext">
 					If the Easter Bunny and the Tooth Fairy had babies would they take your teeth and leave chocolate for you? I'd rather be a bird than a fish.
 				</span>
 				<button class="content-container__button">Click me!</button>
