--- a/classworks/pavel-kalugin/05_javascript/index.html
+++ b/classworks/pavel-kalugin/05_javascript/index.html
@@ -16,6 +16,8 @@
       <button class="plus button">+10 cекунд</button>
       <button class="minus button">-10 cекунд</button>
       <button class="reset button">Сброс</button>
+      <button class="reverse button">Обратный отсчет</button>
+      <button class="normal button">Секундомер</button>
     </div>
   </main>
 
