--- a/classworks/yegor-koren/05_javascript/index.html
+++ b/classworks/yegor-koren/05_javascript/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>Секундомер</title>
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,600&amp;subset=cyrillic" rel="stylesheet">
-  <link rel="stylesheet" href="index.css">
+  <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
   <main>
@@ -19,6 +19,6 @@
     </div>
   </main>
 
-  <script src="index.js"></script>
+  <script src="script/index.js"></script>
 </body>
 </html>
