Add result history

--- a/classworks/pavel-kalugin/05_javascript/index.html
+++ b/classworks/pavel-kalugin/05_javascript/index.html
@@ -18,7 +18,10 @@
       <button class="reset button">Сброс</button>
       <button class="reverse button">Обратный отсчет</button>
       <button class="normal button">Секундомер</button>
+      <button class="save button">Сохранить значение</button>
     </div>
+
+    <div class="history"></div>
   </main>
 
   <script src="index.js"></script>
