[yk_05-javascript] Add timer function

--- a/classworks/yegor-koren/05_javascript/index.html
+++ b/classworks/yegor-koren/05_javascript/index.html
@@ -16,6 +16,7 @@
       <button class="plus button">+10 cекунд</button>
       <button class="minus button">-10 cекунд</button>
       <button class="reset button">Сброс</button>
+      <button class="reverse button">Обратный отсчёт</button>
     </div>
   </main>
 
