[yk_javascript] Add table results function

--- a/classworks/yegor-koren/05_javascript/index.html
+++ b/classworks/yegor-koren/05_javascript/index.html
@@ -17,6 +17,13 @@
       <button class="minus button">-10 cекунд</button>
       <button class="reset button">Сброс</button>
       <button class="reverse button">Обратный отсчёт</button>
+      <button class="write button">Записать результат</button>
+    </div>
+
+    <div class="results-table">
+      <h1 class="header">Список результатов</h1>
+      <ol class="results">
+      </ol>
     </div>
   </main>
 
