[+] Implement reverse timer & result table

--- a/classworks/aliona-mozol/05_js/task/index.html
+++ b/classworks/aliona-mozol/05_js/task/index.html
@@ -2,11 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Секундомер</title>
+  <title>Timer</title>
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,600&amp;subset=cyrillic" rel="stylesheet">
   <link rel="stylesheet" href="index.css">
 </head>
 <body>
+
   <main>
     <div class="timer"></div>
 
@@ -20,7 +21,9 @@
     <div class="buttons">
       <button class="reverse-timer button">Reverse Timer</button>
       <button class="stopwatch button">Stopwatch</button>
+      <button class="fix button">Fix time</button>
     </div>
+    <textarea class="result-list" readonly></textarea>
   </main>
 
   <script src="index.js"></script>
