--- a/classworks/Nikita-Goncharov/03_html-css-part-2/boilerplate/src/index.html
+++ b/classworks/Nikita-Goncharov/03_html-css-part-2/boilerplate/src/index.html
@@ -9,7 +9,7 @@
   </head>
   <body class="body">
     <div id="main"></div>
-      <div class="sidebar--mobile"></div>
+      <div class="sidebar-button"></div>
       <div class="sidebar">
           <div class="profile-data">
             <img src="images/avatar.jpg" alt="Avatar" class="sidebar__avatar">
@@ -25,10 +25,10 @@
             <a href="#contact" class="navigation__link"><i class="navigation__symbol fa-envelope"></i><p class="navigation__text">Contact</p></a>
           </nav>
           <div class="social">
-            <i class="fa-home"></i>
-            <i class="fa-home"></i>
-            <i class="fa-home"></i>
-            <i class="fa-home"></i>
+            <i class="social__fa-home fa-home"></i>
+            <i class="social__fa-home fa-home"></i>
+            <i class="social__fa-home fa-home"></i>
+            <i class="social__fa-home fa-home"></i>
           </div>
       </div>
       <div class="banner">
@@ -50,16 +50,16 @@
         </div>
         <div class="grid">
           <div class="colomn">
-            <img src="/images/pic03.jpg" class="colomn__img">
-            <img src="/images/pic05.jpg" class="colomn__img">
+            <img src="/images/pic03.jpg" alt="Grid Photo" class="colomn__img">
+            <img src="/images/pic05.jpg" alt="Grid Photo" class="colomn__img">
           </div>
           <div class="colomn">
-            <img src="/images/pic04.jpg" class="colomn__img">
-            <img src="/images/pic02.jpg" class="colomn__img">
+            <img src="/images/pic04.jpg" alt="Grid Photo" class="colomn__img">
+            <img src="/images/pic02.jpg" alt="Grid Photo" class="colomn__img">
           </div>
           <div class="colomn">
-            <img src="/images/pic06.jpg" class="colomn__img">
-            <img src="/images/pic05.jpg" class="colomn__img">
+            <img src="/images/pic06.jpg" alt="Grid Photo" class="colomn__img">
+            <img src="/images/pic05.jpg" alt="Grid Photo" class="colomn__img">
           </div>
         </div>
     </div>
@@ -69,16 +69,18 @@
       </div>
     </div>
     <div id="contact">
-      <div class="contact-text">
-        <h1 class="contact-text__big-note">Contact</h1>
-        <p class="contact-text__small-note">Elementum sem parturient nulla quam placerat viverra maurus non cum elit tempus ullamcorper dolor. Libero rutrum ut lacinia donec curae mus. Eleifend id porttitor ac ultricies lobortis sem nunc orci ridiculus faucibus a consectetur. Porttitor curae mauris urna mi dolor</p>
+      <div class="contact-content">
+        <div class="contact-text">
+          <h1 class="contact-text__big-note">Contact</h1>
+          <p class="contact-text__small-note">Elementum sem parturient nulla quam placerat viverra maurus non cum elit tempus ullamcorper dolor. Libero rutrum ut lacinia donec curae mus. Eleifend id porttitor ac ultricies lobortis sem nunc orci ridiculus faucibus a consectetur. Porttitor curae mauris urna mi dolor</p>
+        </div>
+        <form class="input-form">
+          <input type="textarea" class="input-form__field"  placeholder="Name"></input>
+          <input type="textarea" class="input-form__field"  placeholder="Email"></input>
+          <input type="textarea" class="input-form__field--big-size"  placeholder="Message"></input>
+        </form>
+        <button class="main-button">Send Message</button>
       </div>
-      <form class="input-form">
-        <input type="textarea" class="input-form__name-field"  placeholder="Name"></input>
-        <input type="textarea" class="input-form__email-field"  placeholder="Email"></input>
-        <input type="textarea" class="input-form__message-field"  placeholder="Message"></input>
-      </form>
-      <button class="main-button">Send Message</button>
     </div>
   </body>
 </html>
