--- a/classworks/polina-rudenko/03_htmlcss/pr_03/src/index.html
+++ b/classworks/polina-rudenko/03_htmlcss/pr_03/src/index.html
@@ -12,7 +12,7 @@
 <body class="body ">
 
   <div class="sidebar">
-    <div class="menu__place">
+    <div class="sidebar__menu">
       <div class="sidebar__profile">
         <img class="profile__avatar" src="images/avatar.jpg">
         <div class="profile__info">
@@ -42,11 +42,11 @@
     </div>
     <div class="footer__place">
       <ul class="footer">
-        <li class="footer__item"> <i class="fa fa-twitter footer__icon"></i> </li>
-        <li class="footer__item"> <i class="fa fa-facebook footer__icon"></i></li>
-        <li class="footer__item"> <i class="fa fa-github footer__icon"></i></li>
-        <li class="footer__item"> <i class="fa fa-dribbble footer__icon"></i></li>
-        <li class="footer__item"> <i class="fa fa-envelope footer__icon"></i></li>
+        <li class="footer__item"><a herf=""> <i class="fa fa-twitter footer__icon"></i></a></li>
+        <li class="footer__item"><a herf=""> <i class="fa fa-facebook footer__icon"></i></a></li>
+        <li class="footer__item"><a herf=""> <i class="fa fa-github footer__icon"></i></a></li>
+        <li class="footer__item"><a herf=""> <i class="fa fa-dribbble footer__icon"></i></a></li>
+        <li class="footer__item"><a herf=""> <i class="fa fa-envelope footer__icon"></i></a></li>
       </ul>
     </div>
   </div>
@@ -60,13 +60,13 @@
       <div class="intro__content">
         <div class="content__header">
           Hi! I'm Prologue, a
-          <font>free </font>responsive
-          <br> site template designed by
-          <font>HTML5 UP</font>
+          free responsive
+          site template designed by
+          HTML5 UP
         </div>
         <div class="content__description">
           Ligula scelerisque justo sem accumsan diam quis
-          <br> vitae naque dictum sollicitudin elementum.
+          vitae naque dictum sollicitudin elementum.
         </div>
         <button class="button"> Magna Aliquam</a>
   </div>
@@ -75,9 +75,7 @@
 
 
   <div class="portfolio" id="Portfolio">
-    <div class="title">
-    <p>  Portfolio </p>
-    </div>
+    <p class="title">  Portfolio </p>
     <p class="description">
     Vitae natoque dictum
     etiam semper magnis enim feugiat
@@ -87,7 +85,7 @@
     ipsum fermentum etiam vivamus eget.
     Nunc nibh morbi quis fusce hendrerit lacus ridiculus.
   </p>
-   <div class="portfolio__gallery">
+   <div class="gallery">
      <div class="gallery__cards">
     <div class="cards__items"> <img class="itema__image" src="images/pic02.jpg"> <p>Ipsum Feugiat</p> </div>
     <div class="cards__items"><img class="itema__image" src="images/pic03.jpg"> <p>Rhoncus Semper</p> </div>
@@ -104,9 +102,7 @@
 
 
   <div class="contact" id="Contact">
-    <div class="title">
-     <p>  Contact <p/>
-    </div>
+     <p class="title">  Contact <p/>
       <p class="description">
       Elementum sem parturient nulla quam placerat viverra mauris
       non cum elit tempus ullamcorper dolor. Libero rutrum ut lacinia
